# adb-interface

./: CMakeLists.txt  README.md  main.cpp  test.cpp
client/: CMakeLists.txt
client/inc/: config.h  socket.h
client/src/: socket.cpp
inc/: command.hpp  extension.hpp  logger.hpp  socket.hpp  utils.hpp  window.hpp
standalone/: CMakeLists.txt  main.cpp
standalone/inc/: README
